Fix that there was a big gap in the cause subject display

--- a/public/stylesheets/reports.css
+++ b/public/stylesheets/reports.css
@@ -140,7 +140,8 @@
   padding-left: 0;
   color: #333;
   font-style: normal;
-  margin: 5px 50px 0 0;
+  margin: 0;
+  margin-left: 5px;
 }
 
 .report blockquote p, .report_description blockquote p, .interest_group blockquote p {
